[tdb]
 - Configurable extension color
 - Add configurable shortcut and keyboard support
 - Configurable position (left or right)
 - Configurable font scaling
 - Configurable visual mask scaling
 - Configurable icon for chrome menu

[1.4]
 - Search function
 - [toDo] Info page for new features
 - [toDo] Help page after installation
 - Added mouseover openAction configuration

[1.3]
 - Optional userdata sharing
 - Extended Options-Page (Tabs for 'Configuration', 'Feedback' and 'Help Improving')
 - Optimized favicon loading mechanism

[1.2]
 - Middle click action configuration
 - Removed jQuery dependency
 - Code optimization
 - Minified js-files

[1.1]
 - Configuration extended
 - Added drag&drop functionality for changing bookmark positions
 - Optimized scroll behaviour of trackpads
 - Optimized settings page for hdpi screens

[1.0]
 - Sidebar with all bookmarks
 - Edit/Remove bookmarks and directories
 - Infos about bookmarks and directories
 - Check the bookmarks for changed or broken urls
 - Optional visual (icon on semitransparent background)
 - Fully configurable