@@ -1,6 +1,6 @@
 {
   "name": "Bookmark Sidebar",
-  "version": "1.3.8",
+  "version": "1.4.0",
   "license": "GPL-3.0",
   "author": "Philipp König",
   "homepage": "https://moonware.de",
