@@ -118,7 +118,7 @@ div.loading > div {
   left: 0;
   width: 100%;
   height: 100%;
-  border-color: #5048b8;
+  border-color: #00897b;
   animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
 }
 div.loading > div > div.circle-clipper {
@@ -132,7 +132,7 @@ div.loading > div > div.circle-clipper {
 div.loading > div > div.circle-clipper > div {
   width: 200%;
   height: 100%;
-  border: 3px solid #5048b8;
+  border: 3px solid #00897b;
   border-bottom-color: transparent;
   border-radius: 50%;
   position: absolute;
@@ -407,7 +407,7 @@ body::after {
   justify-content: center;
   font-size: 500%;
   font-weight: 200;
-  color: #5048b8;
+  color: #00897b;
   top: 0;
   left: 350px;
   height: 100%;
@@ -458,7 +458,7 @@ section#sidebar > header > span > span {
   margin: -5px 5px 0 0;
   font-weight: 300;
   font-size: 150%;
-  color: #5048b8;
+  color: #00897b;
 }
 section#sidebar > header > a {
   vertical-align: top;
@@ -596,7 +596,7 @@ section#sidebar > div.scrollBox > ul a > span.drag {
 }
 section#sidebar > div.scrollBox > ul a > span.drag:hover {
   background-position: -35px center;
-  background-color: #5048b8;
+  background-color: #00897b;
 }
 section#sidebar > div.scrollBox > ul a + ul {
   padding-left: 25px;
@@ -669,12 +669,12 @@ a.dragHelper > span.drag {
 }
 a.dragHelper > span.drag:hover {
   background-position: -35px center;
-  background-color: #5048b8;
+  background-color: #00897b;
 }
 a.dragHelper > span.drag {
   display: block;
   background-position: -35px center;
-  background-color: #5048b8;
+  background-color: #00897b;
 }
 a.dragHelper.snap {
   transition: 0.2s;
@@ -689,7 +689,7 @@ div#shareUserdata {
   width: 100%;
   height: 100%;
   z-index: 4;
-  background: #5048b8;
+  background: #00897b;
   display: flex;
   align-items: center;
   justify-content: center;
