@@ -1,7 +1,7 @@
 $baseFontSize: 14px;
 $baseFontFamily: Roboto, sans-serif;
 $baseFontWeight: 300;
-$mainColor: #5048b8;
+$mainColor: #00897b;
 $textColor: #666;
 $textColorLight: #aaa;
 $errorColor: #faa;
